[gd_scene load_steps=3 format=3 uid="uid://bm86063c47is6"]

[ext_resource type="PackedScene" uid="uid://lg702iejbjhn" path="res://combat/ability_panel/ability_button.tscn" id="1_3ohc6"]
[ext_resource type="Script" path="res://combat/capture_panel/capture_panel.gd" id="1_jjfsb"]

[node name="CapturePanel" type="ColorRect"]
offset_left = 494.0
offset_top = 343.0
offset_right = 691.0
offset_bottom = 473.0
color = Color(0.0588235, 0.0588235, 0.0588235, 1)
script = ExtResource("1_jjfsb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 15.0
offset_right = 182.0
offset_bottom = 130.0
theme_override_constants/separation = 15
alignment = 1

[node name="CaptureButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_3ohc6")]
offset_top = 15.0
offset_right = 167.0
offset_bottom = 57.0
text = "Capture"

[node name="ReleaseButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_3ohc6")]
offset_top = 72.0
offset_right = 167.0
offset_bottom = 114.0
text = "Release"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CaptureButton" to="." method="_on_capture_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReleaseButton" to="." method="_on_release_button_pressed"]
